# brucebot

./: .gitignore  CHANGELOG.md  Procfile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml  testing_commands.txt  update_bot.ps1
brucebot/: main.py
brucebot/cogs/: _every_time_played.py  _help.py  admin.py  album.py  archive.py  bootleg.py  cover.py  error.py  info.py  location.py  on_this_day.py  relation.py  setlist.py  song.py  stats.py  tour.py  venue.py
brucebot/cogs/bot_stuff/: bot_embed.py  db.py  utils.py  viewmenu.py
