[project]
name = "brucebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.2",
    "discord-py>=2.5.2",
    "ftfy>=6.3.1",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv>=1.1.1",
    "reactionmenu>=3.1.7",
]
