[project]
name = "brucebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dateparser>=1.2.2",
    "discord-py>=2.5.2",
    "ftfy>=6.3.1",
    "psycopg[binary,pool]>=3.2.9",
    "python-dotenv>=1.1.1",
    "reactionmenu>=3.1.7",
]

[tool.ty.environment]
root = ["./brucebot"]

[tool.ty.rules]
non-subscriptable = "ignore"
possibly-missing-attribute = "ignore"
invalid-argument-type="ignore"
invalid-return-type="ignore"
invalid-assignment="ignore"
invalid-type-form="ignore"
unresolved-attribute="ignore"
no-matching-overload="ignore"
unsupported-operator="ignore"
unresolved-import="ignore"
